# birdpocalypse

./: CMakeLists.txt  README.md  best_bird.txt  best_brain.txt  main.cpp
big_brains/3-6-1/: best_bird.txt  pogger_brain.txt  pogger_brain_2.txt  pogger_brain_3.txt  pogger_brain_4.txt
big_brains/4-1/: pogger_brain.txt  pogger_brain_gasm.txt  pogger_brain_gasm_2.txt
src/: bird.hpp  brain.hpp  config.hpp  pipe.hpp  population.hpp
